crates/pg_syntax/tests/snapshots/postgres_regress/dbsize@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_size_bytes('1e1000000000000000000');"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..20 "pg_size_bytes"
      Ascii40@20..21 "("
      AConst@21..44
        Sconst@21..44 "'1e1000000000000000000'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

