crates/pg_syntax/tests/snapshots/postgres_regress/dbsize@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_size_bytes('-.');"
---
SelectStmt@0..27
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..25
    FuncCall@7..25
      Ident@7..20 "pg_size_bytes"
      Ascii40@20..21 "("
      AConst@21..25
        Sconst@21..25 "'-.'"
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

