crates/pg_syntax/tests/snapshots/postgres_regress/dbsize@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_size_bytes('+912+ kB');"
---
SelectStmt@0..33
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..20 "pg_size_bytes"
      Ascii40@20..21 "("
      AConst@21..31
        Sconst@21..31 "'+912+ kB'"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

