crates/pg_syntax/tests/snapshots/postgres_regress/delete@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE delete_test (\n    id SERIAL PRIMARY KEY,\n    a INT,\n    b text\n);"
---
CreateStmt@0..78
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "delete_test"
  Whitespace@24..25 " "
  Ascii40@25..26 "("
  Newline@26..27 "\n"
  Whitespace@27..31 "    "
  ColumnDef@31..52
    Ident@31..33 "id"
    Whitespace@33..34 " "
    TypeName@34..40
      Ident@34..40 "SERIAL"
    Whitespace@40..41 " "
    Constraint@41..52
      Primary@41..48 "PRIMARY"
      Whitespace@48..49 " "
      Key@49..52 "KEY"
  Ascii44@52..53 ","
  Newline@53..54 "\n"
  Whitespace@54..58 "    "
  ColumnDef@58..63
    Ident@58..59 "a"
    Whitespace@59..60 " "
    TypeName@60..63
      IntP@60..63 "INT"
  Ascii44@63..64 ","
  Newline@64..65 "\n"
  Whitespace@65..69 "    "
  ColumnDef@69..75
    Ident@69..70 "b"
    Whitespace@70..71 " "
    TypeName@71..75
      TextP@71..75 "text"
  Newline@75..76 "\n"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

